<resources>
    <string name="app_name">ODOJ</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="logoOdoj">One Day One Juz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="versi">Versi 1.0.0</string>
    <string name="login_btn">Login</string>
    <string name="questionAkun">Belum Punya Akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="gradienbg">gradienbg</string>
    <string name="edit_status">Edit Status</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="button">Button</string>
    <string name="cek_aplikasi_lainnya">Cek Aplikasi Lainnya</string>
    <string name="one_day_one_juz_app">One Day One Juz App</string>
    <string name="daftar">Daftar</string>
    <string name="pilih_pulau">Pilih Pulau</string>
    <string name="jenis_kelamin">Pilih Jenis Kelamin</string>
    <string name="tidak_ada_pesan">tidak ada pesan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--    String Notifikasi bellow-->
    <string name="text_show_notif">Testing Notif With Reply</string>
    <string name="notif_action_reply">Reply Notif</string>
    <string name="notif_title">New Notification</string>
    <string name="notif_content">Ada notif baru</string>
    <string name="notif_title_sent">Reply Sent</string>
    <string name="notif_content_sent">Message has been sent</string>
    <string name="hint_reply">Masukkan reply</string>
    <string name="ayo_masuk">Ayo Masuk</string>
    <string name="one_day_one_juz">One Day One Juz</string>
    <string name="logout">Logout</string>
</resources>
