<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activity.SplashScreenActivity">


    <ImageView
            android:id="@+id/splashScreen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo3" />

    <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/one_day_one_juz"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="252dp"
            tools:layout_editor_absoluteY="740dp" />

    <Button
            android:id="@+id/exploreButton"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:alpha="0"
            android:onClick="masuk"
            android:fontFamily="@font/roboto"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:clickable="true"
            android:text="@string/ayo_masuk"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/btn_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="630dp"
            android:focusable="true" />

    <ProgressBar
            android:visibility="gone"
            android:id="@+id/splashScreen_Progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:contentDescription="@string/gradienbg"
            android:scaleType="fitEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg" />

</androidx.constraintlayout.widget.ConstraintLayout>