<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/secondary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.Setting.SettingActivity">


    <androidx.appcompat.widget.Toolbar
            app:title="Setting"
            app:titleTextColor="@color/white"
            android:background="@color/primary"
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStartWithNavigation="0dp"
            android:layout_height="?attr/actionBarSize">

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_below="@id/toolbar_setting"
            android:padding="16dp"
            android:background="@color/secondary"
            android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userSetting"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/usersetting"
                android:contentDescription="@string/app_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_width="156dp"
                android:layout_height="156dp"/>

        <TextView
                android:id="@+id/nameSettingTxt"
                android:layout_marginTop="30dp"
                tools:text="User Name"
                android:layout_below="@id/userSetting"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textColor="@color/prymaridark"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/statusUserSetting"
                android:layout_marginTop="10dp"
                tools:text="Status"
                android:layout_below="@id/nameSettingTxt"
                android:layout_centerHorizontal="true"
                android:textColor="@color/prymaridark"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </RelativeLayout>

    <Button
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/btnsetting"
            android:layout_below="@id/relative"
            android:id="@+id/buttonChangePicturProfil"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/edit_picture"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:layout_margin="16dp"
            android:layout_below="@id/buttonChangePicturProfil"
            android:background="@drawable/btnsetting"
            android:id="@+id/buttonEditStatus"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/edit_status"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:indeterminateDrawable="@drawable/progres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/relative"
            android:id="@+id/settingSpinner"/>

</RelativeLayout>