<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/secondary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.DaftarLogin.DaftarActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/logo"
                android:layout_marginTop="16dp"
                android:layout_width="106dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/logo3"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/logoOdoj"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true"/>

        <EditText
                android:id="@+id/userEditTextDaftar"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/daftar_person_icon"
                android:background="@drawable/edit_round"
                android:drawablePadding="10dp"
                android:padding="8dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/logo"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="Masukkan Nama"/>

        <EditText
                android:id="@+id/emailEditTextDaftar"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_round"
                android:padding="8dp"
                android:drawableStart="@drawable/daftar_email_icon"
                android:drawablePadding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_below="@id/userEditTextDaftar"
                android:hint="@string/masukkan_email"/>

        <EditText
                android:id="@+id/passwordEditTextDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/edit_round"
                android:drawablePadding="10dp"
                android:drawableTint="@color/primary"
                android:drawableStart="@drawable/daftar_paswored_icon"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_below="@id/emailEditTextDaftar"
                android:hint="@string/masukkan_password"
                android:layout_centerHorizontal="true"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/provinsiEditTextDaftar"
                android:background="@drawable/edit_round"
                android:drawablePadding="10dp"
                android:drawableTint="@color/primary"
                android:drawableStart="@drawable/daftar_provinsi_icon"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_below="@id/passwordEditTextDaftar"
                android:hint="@string/masukkan_profinsi"/>

        <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@id/provinsiEditTextDaftar"
                android:id="@+id/jeniskelamin_TxtView"
                android:layout_below="@id/provinsiEditTextDaftar"
                android:text="@string/jenis_kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        <RadioGroup
                android:id="@+id/radiogrup_Daftar"
                android:layout_below="@id/jeniskelamin_TxtView"
                android:layout_alignStart="@id/provinsiEditTextDaftar"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:buttonTint="@color/primary"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/radio_lakilaki_DaftarActivty"
                    android:text="Laki-Laki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <RadioButton
                    android:buttonTint="@color/primary"
                    android:id="@+id/radio_peremuan_DaftarActivity"
                    android:text="Perempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RadioGroup>

        <Button
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@android:color/white"
                android:text="@string/daftar"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_round"
                android:layout_centerHorizontal="true"
                android:id="@+id/daftarBtnDaftar"
                android:layout_below="@+id/radiogrup_Daftar"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"/>

        <LinearLayout
                android:layout_below="@id/daftarBtnDaftar"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            <TextView
                    android:id="@+id/textpunyaakun"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:layout_below="@id/daftarBtnDaftar"
                    android:text="Sudah punya akun?"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            <TextView
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:id="@+id/loginTxtDaftar"
                    android:layout_toRightOf="@+id/textpunyaakun"
                    android:layout_marginStart="10dp"
                    android:layout_below="@id/daftarBtnDaftar"
                    android:text="Login Disini!"
                    android:textStyle="bold"
                    android:onClick="LoginOnclickLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/progres"
                android:id="@+id/daftarSpinner"/>

        <Spinner
                android:layout_below="@id/daftarBtnDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"/>

    </RelativeLayout>



</ScrollView>